feat:added proper validator for every routes
